Findbugs all over  - volatile -> atomic  - unused code and fields  - closing streams  - hashCode / equals  - known non-null  - Number.valueOf  - new String  Still avoiding SAM, BOB, SusiMail